# reporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: .$discord_db.drawio.bkp
reporter/: __init__.py  bot_client.py  classes.py  database.py  logger.py  main.py
